--- a/Gauntlets/Gauntlets.csproj
+++ b/Gauntlets/Gauntlets.csproj
@@ -37,12 +37,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Collider.cs" />
+    <Compile Include="Core\Physics\AABBCollider.cs" />
     <Compile Include="Core\ComponentRecord.cs" />
     <Compile Include="Core\GUI\GUIImage.cs" />
     <Compile Include="Core\GUI\GUILabel.cs" />
     <Compile Include="Core\GUI\GUITextBox.cs" />
-    <Compile Include="Core\ICollider.cs" />
+    <Compile Include="Core\Physics\Collider.cs" />
     <Compile Include="Core\XMLHandler.cs" />
     <Compile Include="GauntletsGame.cs" />
     <Compile Include="Program.cs" />
