--- a/Gauntlets/Gauntlets.csproj
+++ b/Gauntlets/Gauntlets.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\Debug\Debug.cs" />
+    <Compile Include="Core\InputManager.cs" />
     <Compile Include="Core\Physics\AABBCollider.cs" />
     <Compile Include="Core\ComponentRecord.cs" />
     <Compile Include="Core\GUI\GUIImage.cs" />
