Added a IsColliding() bool property to Collider, some changes to the default console sprite size,  added a clear command to the Debug Console

--- a/Gauntlets/Gauntlets.csproj
+++ b/Gauntlets/Gauntlets.csproj
@@ -70,6 +70,10 @@
     <Compile Include="Core\Extensors.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Content\Fonts\Console.spritefont" />
+    <None Include="Content\Fonts\DefaultFont.spritefont" />
+    <None Include="Content\Fonts\DejaVuSansMono.ttf" />
+    <None Include="Content\Fonts\Oswald.ttf" />
     <None Include="Content\Scripts\test.lua" />
     <None Include="Icon.png" />
     <None Include="Content\XML\EntityList.xml">
@@ -84,6 +88,7 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Fonts\DejaVu Fonts License.txt" />
     <Content Include="x64\libopenal.so.1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
