--- a/Gauntlets/Gauntlets.csproj
+++ b/Gauntlets/Gauntlets.csproj
@@ -43,6 +43,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\CharacterController.cs" />
     <Compile Include="Core\Debug\Debug.cs" />
     <Compile Include="Core\Debug\DebugConsole.cs" />
     <Compile Include="Core\InputManager.cs" />
