--- a/Gauntlets/Gauntlets.csproj
+++ b/Gauntlets/Gauntlets.csproj
@@ -41,6 +41,9 @@
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\MonoGame.Framework.dll</HintPath>
     </Reference>
+    <Reference Include="Triangulator">
+      <HintPath>ThirdParty\Triangulator.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\CharacterController.cs" />
@@ -55,8 +58,10 @@
     <Compile Include="Core\Physics\Collider.cs" />
     <Compile Include="Core\Physics\SATCollider.cs" />
     <Compile Include="Core\Physics\CharacterCollider.cs" />
+    <Compile Include="Core\Physics\Shape.cs" />
     <Compile Include="Core\Scripting\GameScript.cs" />
     <Compile Include="Core\Scripting\Globals.cs" />
+    <Compile Include="Core\Utils.cs" />
     <Compile Include="Core\XMLHandler.cs" />
     <Compile Include="GauntletsGame.cs" />
     <Compile Include="Program.cs" />
