--- a/Gauntlets/packages.config
+++ b/Gauntlets/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Eto.Forms" version="2.3.0" targetFramework="net45" />
+  <package id="Eto.Platform.Windows" version="2.3.0" targetFramework="net45" />
   <package id="MoonSharp" version="2.0.0.0" targetFramework="net45" />
   <package id="MoonSharp.Debugger" version="2.0.0.0" targetFramework="net45" />
 </packages>
